# WeatherStation

./: .clang-format  .cproject  .cproject_org  .gitignore  .project  .project_org  CMakeLists.txt  Wojcik.D Debug.launch  esp_test.ino
inc/: adc.hpp  dma.hpp  i2c.hpp  sensor.hpp
src/: CMakeLists.txt  main.c  main.cpp
src/DataStructures/: StaticMap.hpp
src/Devices/: CMakeLists.txt  DMAController.cpp  DMAController.hpp  DeviceTraits.cpp  DeviceTraits.hpp  GPIO_Controller.cpp  GPIO_Controller.hpp  I2CBus.cpp  I2C_Bus.hpp  RCC_Controller.cpp  RCC_Controller.hpp  Timer.cpp  Timer.hpp  USART_Bus.cpp  USART_Bus.hpp
src/Devices/Communication/: BluetoothPort.cpp  BluetoothPort.hpp  CMakeLists.txt
src/Devices/Engine/: CMakeLists.txt  Engines.hpp
src/Devices/Sensor/: CMakeLists.txt  HTS22.cpp  HTS22.hpp  I2CSensor.cpp  I2CSensor.hpp  LPS22.cpp  LPS22.hpp
src/Peripheral/: CircularBuffer.hpp  DMAController.cpp  DMAController.hpp  DeviceStream.cpp  DeviceStream.hpp  DeviceTraits.cpp  DeviceTraits.hpp  GPIO_Controller.cpp  GPIO_Controller.hpp  I2CBus.cpp  I2C_Bus.cpp  I2C_Bus.hpp  RCC_Controller.cpp  RCC_Controller.hpp  Timer.cpp  Timer.hpp  USART_Bus.cpp  USART_Bus.hpp
src/PeripheralService/: I2C_Service.hpp
src/Processing/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  Event.cpp  Event.hpp  EventLoop.hpp  EventObserver.cpp  EventObserver.hpp  Task.cpp  Task.hpp  TaskQueue.cpp  TaskQueue.hpp
src/TypeTraits/: Singleton.hpp
tests/: CMakeLists.txt
